# chamkho

./: Cargo.toml  Dockerfile.windows  LICENSE  LICENSE-khmerdict  Lao-Dictionary-LICENSE.txt  README.md  build-standalone-release.bash  build.rs
.github/: FUNDING.yml
data/: khmer_cluster_rules.txt  khmerdict.txt  laowords.txt  myanmar-dict.txt  thai-replace-rules.json  thai.txt  thai_cluster_rules.txt  words_th.txt
src/: acc.rs  cli.rs  cli.yaml  dict.rs  dict_edge_builder.rs  edge.rs  edge_builder.rs  graph.rs  graph_builder.rs  init.rs  latin_edge_builder.rs  lib.rs  pat_edge_builder.rs  punc_acc.rs  punc_edge_builder.rs  space_acc.rs  unk_edge_builder.rs  wordcut.rs
tests/: wordcut.rs
