[package]
name = "chamkho"
version = "0.5.0"
edition = "2018"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
description = "Lao/Thai word segmentation/breaking library and command line"
documentation = "https://github.com/veer66/chamkho/blob/master/README.md"
homepage = "https://github.com/veer66/chamkho"
repository = "https://github.com/veer66/chamkho"
readme = "README.md"
keywords = ["text", "nlp", "lao", "thai", "library"]
license = "Apache-2.0"

[[bin]]
name = "wordcut"
path = "src/cli.rs"

[dependencies]
clap = { version = "1", features = ["yaml"] }
wordcut-engine = { version = "0.5.0" }
