[package]
name = "chamkho"
version = "1.2.0"
edition = "2018"
authors = ["Vee Satayamas <vsatayamas@gmail.com>"]
description = "Khmer, Lao, Myanmar, and Thai word segmentation/breaking library and command line"
documentation = "https://github.com/veer66/chamkho/blob/master/README.md"
homepage = "https://github.com/veer66/chamkho"
repository = "https://github.com/veer66/chamkho"
readme = "README.md"
keywords = ["text", "nlp", "lao", "thai", "library"]
license = "Apache-2.0"

[features]
onedir = []

[[bin]]
name = "wordcut"
path = "src/cli.rs"

[dependencies]
proc-macro2 = "1.0.42"
clap = { version = "3", features = ["derive"] }
wordcut-engine = { version = "1.0.0" }
